force-app/main/default/objects/JU_ProposedProduct__c/JU_ProposedProduct__c.object-meta.xml
<CustomObject>
    <label>提案商品</label>
    <nameField>
        <label>提案商品名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>