force-app/main/default/objects/JU_ProposedProduct__c/fields/AddedValue__c.field-meta.xml
<CustomField>
    <fullName>AddedValue__c</fullName>
    <label>付加価値</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>プレカット</fullName>
            </value>
            <value>
                <fullName>積算</fullName>
                <label>積算＞PT</label>
            </value>
            <value>
                <fullName>積算＞PT以外</fullName>
            </value>
            <value>
                <fullName>積算＞メーカー</fullName>
            </value>
            <value>
                <fullName>積算＞外注</fullName>
            </value>
            <value>
                <fullName>e-cocochi</fullName>
            </value>
            <value>
                <fullName>物流</fullName>
            </value>
            <value>
                <fullName>工事・取付</fullName>
            </value>
            <value>
                <fullName>設計関連サービス</fullName>
            </value>
            <value>
                <fullName>省エネコンサル提案</fullName>
            </value>
            <value>
                <fullName>省施工提案</fullName>
            </value>
            <value>
                <fullName>材工分離提案</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>