force-app/main/default/objects/JU_ProposedProduct__c/fields/AmountPerBuilding__c.field-meta.xml
<CustomField>
    <fullName>AmountPerBuilding__c</fullName>
    <label>1棟当り金額（千円）_半角数字</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>