force-app/main/default/objects/JU_ProposedProduct__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>作図積算BPO</fullName>
            </value>
            <value>
                <fullName>生コン</fullName>
            </value>
            <value>
                <fullName>鉄筋</fullName>
            </value>
            <value>
                <fullName>基礎資材その他</fullName>
            </value>
            <value>
                <fullName>構造プレカット</fullName>
            </value>
            <value>
                <fullName>構造パネル</fullName>
            </value>
            <value>
                <fullName>羽柄材</fullName>
            </value>
            <value>
                <fullName>構造その他</fullName>
            </value>
            <value>
                <fullName>木材</fullName>
            </value>
            <value>
                <fullName>床断熱材</fullName>
            </value>
            <value>
                <fullName>壁天断熱材</fullName>
            </value>
            <value>
                <fullName>床壁天断熱材</fullName>
            </value>
            <value>
                <fullName>サッシ</fullName>
            </value>
            <value>
                <fullName>石膏ボード</fullName>
            </value>
            <value>
                <fullName>軽天材</fullName>
            </value>
            <value>
                <fullName>内装建材</fullName>
            </value>
            <value>
                <fullName>住設機器</fullName>
            </value>
            <value>
                <fullName>電気設備</fullName>
            </value>
            <value>
                <fullName>外装材</fullName>
            </value>
            <value>
                <fullName>外構資材</fullName>
            </value>
            <value>
                <fullName>副資材</fullName>
            </value>
            <value>
                <fullName>物流費</fullName>
            </value>
            <value>
                <fullName>荷揚げ費</fullName>
            </value>
            <value>
                <fullName>工事・サービス</fullName>
            </value>
            <value>
                <fullName>一括納材</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>基礎資材</fullName>
                <isActive>false</isActive>
                <label>基礎資材</label>
            </value>
            <value>
                <fullName>断熱材</fullName>
                <isActive>false</isActive>
                <label>断熱材</label>
            </value>
            <value>
                <fullName>構造関連</fullName>
                <isActive>false</isActive>
                <label>構造関連</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>