force-app/main/default/objects/JU_ProposedProduct__c/fields/category_bpo__c.field-meta.xml
<CustomField>
    <fullName>category_bpo__c</fullName>
    <label>カテゴリ_作図積算BPO提案</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>作図積算_コンサル</fullName>
            </value>
            <value>
                <fullName>作図積算_請負</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>