force-app/main/default/objects/JU_ProposedProduct__c/fields/dx_category1__c.field-meta.xml
<CustomField>
    <fullName>dx_category1__c</fullName>
    <label>商品カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>実証実験</fullName>
            </value>
            <value>
                <fullName>受託開発</fullName>
            </value>
            <value>
                <fullName>ライセンス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>