force-app/main/default/objects/JU_ProposedProduct__c/fields/dx_teiankingaku__c.field-meta.xml
<CustomField>
    <fullName>dx_teiankingaku__c</fullName>
    <label>提案金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>