force-app/main/default/objects/JU_ProposedProduct__c/fields/EmploymentAmount__c.field-meta.xml
<CustomField>
    <fullName>EmploymentAmount__c</fullName>
    <label>採用金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>