force-app/main/default/objects/JU_ProposedProduct__c/fields/Field1ddd__c.field-meta.xml
<CustomField>
    <fullName>Field1ddd__c</fullName>
    <formula>AmountPerBuilding__c  *  NumberOfTargetBuildings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>提案金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>