force-app/main/default/objects/JU_ProposedProduct__c/fields/JU_saiyouhusaiyoumeisai__c.field-meta.xml
<CustomField>
    <fullName>JU_saiyouhusaiyoumeisai__c</fullName>
    <formula>TEXT(Oppotunity__r.JU_saiyouhusaiyoumeisai__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>採用・不採用明細</label>
    <type>Text</type>
</CustomField>