force-app/main/default/objects/JU_ProposedProduct__c/fields/JU_shoExternalKey__c.field-meta.xml
<CustomField>
    <fullName>JU_shoExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>住環境取り込み用（外部キー）</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>