force-app/main/default/objects/JU_ProposedProduct__c/fields/JU_syouhinbetsuztyutyuubi__c.field-meta.xml
<CustomField>
    <fullName>JU_syouhinbetsuztyutyuubi__c</fullName>
    <label>売上計上予定日</label>
    <type>Date</type>
</CustomField>