force-app/main/default/objects/JU_ProposedProduct__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <label>メーカー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>