force-app/main/default/objects/JU_ProposedProduct__c/fields/NumberOfTargetBuildings__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTargetBuildings__c</fullName>
    <label>対象棟戸数（棟／年）_半角数字</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>