force-app/main/default/objects/JU_ProposedProduct__c/fields/opportunityStageName__c.field-meta.xml
<CustomField>
    <fullName>opportunityStageName__c</fullName>
    <formula>TEXT(  Oppotunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談フェーズ</label>
    <type>Text</type>
</CustomField>