force-app/main/default/objects/JU_ProposedProduct__c/fields/Oppotunity__c.field-meta.xml
<CustomField>
    <fullName>Oppotunity__c</fullName>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>提案商品</relationshipLabel>
    <relationshipName>OppotunityProposedProduct</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>