force-app/main/default/objects/JU_ProposedProduct__c/fields/oppStageStagnantDays__c.field-meta.xml
<CustomField>
    <fullName>oppStageStagnantDays__c</fullName>
    <formula>Oppotunity__r.StageStagnantDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談フェーズ停滞日数</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>