force-app/main/default/objects/JU_ProposedProduct__c/fields/ProposalPoints__c.field-meta.xml
<CustomField>
    <fullName>ProposalPoints__c</fullName>
    <formula>EstimatedAnnualAmount__c  / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>提案ポイント</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>