force-app/main/default/objects/JU_ProposedProduct__c/fields/ST_category__c.field-meta.xml
<CustomField>
    <fullName>ST_category__c</fullName>
    <label>品名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本体</fullName>
            </value>
            <value>
                <fullName>本体（NS）</fullName>
            </value>
            <value>
                <fullName>フープ</fullName>
            </value>
            <value>
                <fullName>杭</fullName>
            </value>
            <value>
                <fullName>土木</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>