force-app/main/default/objects/JU_ProposedProduct__c/fields/ST_DeliveryMonth__c.field-meta.xml
<CustomField>
    <fullName>ST_DeliveryMonth__c</fullName>
    <label>納入月</label>
    <type>Date</type>
</CustomField>