force-app/main/default/objects/JU_ProposedProduct__c/fields/ST_Destinat__c.field-meta.xml
<CustomField>
    <fullName>ST_Destinat__c</fullName>
    <label>納入先</label>
    <length>100</length>
    <type>Text</type>
</CustomField>