force-app/main/default/objects/JU_ProposedProduct__c/fields/ST_Estimatedamount2__c.field-meta.xml
<CustomField>
    <fullName>ST_Estimatedamount2__c</fullName>
    <label>見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>