force-app/main/default/objects/JU_ProposedProduct__c/fields/ST_grossprofit__c.field-meta.xml
<CustomField>
    <fullName>ST_grossprofit__c</fullName>
    <label>粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>