force-app/main/default/objects/JU_ProposedProduct__c/fields/ST_rank__c.field-meta.xml
<CustomField>
    <fullName>ST_rank__c</fullName>
    <label>ランク</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>