force-app/main/default/objects/JU_ProposedProduct__c/fields/ST_remark__c.field-meta.xml
<CustomField>
    <fullName>ST_remark__c</fullName>
    <label>備考</label>
    <length>100</length>
    <type>Text</type>
</CustomField>