force-app/main/default/objects/JU_ProposedProduct__c/fields/ST_unitprice2__c.field-meta.xml
<CustomField>
    <fullName>ST_unitprice2__c</fullName>
    <label>単価</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>