force-app/main/default/objects/JU_ProposedProduct__c/recordTypes/JU_sakzusekisanbpo.recordType-meta.xml
<RecordType>
    <fullName>JU_sakzusekisanbpo</fullName>
    <active>true</active>
    <label>住環境_作図積算BPO提案</label>
</RecordType>