force-app/main/default/objects/JU_ProposedProduct__c/recordTypes/RecordType_Ju1.recordType-meta.xml
<RecordType>
    <fullName>RecordType_Ju1</fullName>
    <active>true</active>
    <label>住環境</label>
</RecordType>