force-app/main/default/objects/JU_ProposedProduct__c/recordTypes/recordtype_kensetsudx_teisansyouhin.recordType-meta.xml
<RecordType>
    <fullName>recordtype_kensetsudx_teisansyouhin</fullName>
    <active>true</active>
    <label>建設DX</label>
</RecordType>