force-app/main/default/objects/JU_ProposedProduct__c/recordTypes/RecordType_SteelSales.recordType-meta.xml
<RecordType>
    <fullName>RecordType_SteelSales</fullName>
    <active>true</active>
    <label>スチール_棒鋼部</label>
</RecordType>