force-app/main/default/objects/JU_ProposedProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AmountPerBuilding__c</columns>
    <columns>Maker__c</columns>
    <columns>Category__c</columns>
    <columns>EmploymentAmount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Oppotunity__c</columns>
    <columns>JU_shoExternalKey__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>