force-app/main/default/objects/JU_ProposedProduct__c/listViews/teianshouhin01.listView-meta.xml
<ListView>
    <fullName>teianshouhin01</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>提案商品データ</label>
</ListView>